<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="#ffffff">

    <Spinner
        android:id="@+id/spinnerRole"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textViewTaskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock_title" android:layout_centerHorizontal="true" android:layout_alignParentTop="true" style="@style/rock_style"/>

        <EditText
            android:id="@+id/editTextTaskTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/textViewListViewItemRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock_content" android:layout_below="@id/editTextTaskTitle" android:layout_centerHorizontal="true" style="@style/rock_style" android:layout_marginTop="5dp"/>

        <EditText
            android:id="@+id/editTextTaskContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/textViewListViewItemRole"
            android:inputType="textMultiLine" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rock_status" android:layout_centerHorizontal="true" android:layout_below="@id/editTextTaskContent" style="@style/rock_style" android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/spinnerTaskStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_below="@id/textView3" android:prompt="@string/rock_status"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" android:layout_gravity="left"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" android:layout_gravity="right"/>

    </LinearLayout>

</LinearLayout>